# taac_2026-puiching-memory

./: .gitattributes  .gitignore  404.html  README.md  TESTING.md  dev.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run.sh  sitemap.xml  zensical.toml
.agents/skills/copilot-review-loop/: SKILL.md
.agents/skills/pcvr-experiment-integration/: SKILL.md
.agents/skills/taac-competition-environment/: SKILL.md
.agents/skills/taac-docs-workflow/: SKILL.md
.agents/skills/taac-docs-workflow/agents/: openai.yaml
.agents/skills/taac-docs-workflow/references/: docs-pipeline.md
.agents/skills/taac-experiment-onboard/: SKILL.md
.agents/skills/taac-experiment-onboard/agents/: openai.yaml
.agents/skills/taac-experiment-onboard/references/: onboarding-checklist.md
.agents/skills/taac-python-guardrails/: SKILL.md
.agents/skills/taac-python-guardrails/agents/: openai.yaml
.agents/skills/taac-python-guardrails/references/: rules-and-hotspots.md
.devcontainer/: post-create.sh
.github/workflows/: ci.yml  deploy-docs.yml  gpu-tests.yml  performance-benchmarks.yml
TODO/: index.html
assets/javascripts/: mathjax.js
assets/stylesheets/: extra.css
cli/: index.html
config/: __init__.py
config/baseline/: __init__.py  model.py  ns_groups.json  utils.py
config/ctr_baseline/: __init__.py  model.py
config/deepcontextnet/: __init__.py  model.py
config/grok/: __init__.py
config/hyformer/: __init__.py  model.py
config/interformer/: __init__.py  data.py  model.py  ns_groups.json
config/onetrans/: __init__.py  model.py
config/oo/: __init__.py  model.py  utils.py
config/symbiosis/: __init__.py  model.py
config/unirec/: __init__.py  model.py  ns_groups.json  utils.py
config/uniscaleformer/: __init__.py  model.py  utils.py
configs/: baseline.yaml
dev/: index.html
docs/: TODO.md  architecture.md  cli.md  dev.md  experiments.md  getting-started.md  index.md  project-layout.md  testing.md
docs/analysis/: benchmarks.md  dataset-eda.md  evaluation.md  index.md  taac2025-insights.md
docs/assets/figures/eda/: cardinality.echarts.json  cardinality_bins.echarts.json  co_missing.echarts.json  column_layout.echarts.json  coverage_heatmap.echarts.json  cross_domain_overlap.echarts.json  dense_distributions.echarts.json  edition_comparison.echarts.json  feature_auc.echarts.json  ndcg_decay.echarts.json  (+8 more)
docs/assets/javascripts/: echarts-fence.js  mathjax.js
docs/assets/stylesheets/: extra.css
docs/experiments/: baseline.md  ctr-baseline.md  deepcontextnet.md  grok.md  hyformer.md  index.md  interformer.md  onetrans.md  oo.md  symbiosis.md  unirec.md  uniscaleformer.md
docs/guide/: competition-online-server.md  contributing.md  devcontainer.md  local-site.md  official-competition-docs.md  online-training-bundle.md  repo-log-management.md  search.md  testing.md  triton-kernels.md
docs/ideas/: index.md
docs/ideas/posts/: 001-rec-model-work-summary.md  002-taac2025-competition-paper.md  003-learning-mechanics-analysis.md
docs/overrides/partials/: comments.html
docs/papers/: hyformer.md  index.md  interformer.md  onetrans.md  taac2025.md
docs/stages/: gen.md  main.md
experiments/: index.html
getting-started/: index.html
papers/: index.html
papers/hyformer/: index.html
papers/interformer/: index.html
papers/onetrans/: index.html
project-layout/: index.html
scripts/: lint_torch.py  run_gpu_tests.py
search/: search_index.json
src/taac2026/: __init__.py
src/taac2026/domain/: __init__.py  config.py  experiment.py  metrics.py  runtime.py  types.py
src/taac2026/infrastructure/: __init__.py  checkpoints.py
src/taac2026/reporting/: __init__.py  benchmark_charts.py  dataset_eda.py  model_performance_plot.py  tech_timeline.py
stages/main/: index.html
taac2026/: config.py  data.py  model.py  train.py  utils.py  visualize.py
taac2026/feature_engineering/: __init__.py  cluster_cli.py  clustering.py  dataset_analysis.py
tests/: __init__.py  conftest.py  gpu_env_support.py  repo_policy_support.py  support.py  test_clean_pycache.py  test_data_pipeline.py  test_dataset_eda.py  test_evaluate_cli.py  test_experiment_packages.py  test_gpu.py  test_metrics.py  test_model_performance_plot.py  test_model_robustness.py  test_package_training.py  test_payload.py  test_profiling_unit.py  test_property_based.py  test_runtime_integration.py  test_schema_contract.py  test_search.py  test_search_trial.py  test_search_worker.py  test_search_worker_integration.py  test_tech_timeline.py  test_test_collection.py
tests/benchmarks/: conftest.py  transformer_backend_support.py
tests/benchmarks/cpu/: bench_attention_forward.py  bench_collate.py  bench_e2e_train_step.py  bench_embedding_lookup.py  bench_ffn_forward.py  bench_inference_latency.py  bench_rmsnorm.py  conftest.py
tests/benchmarks/gpu/: bench_attention_forward.py  bench_embedding_lookup.py  bench_transformer_backends.py
tests/gpu/: test_gpu.py  test_gpu_environment.py  test_triton_kernels.py
tests/integration/: test_data_pipeline.py  test_embedding_collection.py  test_evaluate_cli.py  test_experiment_packages.py  test_model_robustness.py  test_optimizers.py  test_profiling.py  test_profiling_unit.py  test_quantization.py  test_runtime_integration.py  test_search.py  test_search_trial.py  test_search_worker.py  test_search_worker_integration.py  test_torchrec_embedding.py  test_training_recovery.py
tests/unit/: test_benchmark_charts.py  test_checkpoint_and_loader.py  test_dataset_eda.py  test_eda_cli.py  test_experiment_packages.py  test_github_cleanup.py  test_metrics.py  test_model_performance_plot.py  test_model_performance_reporting.py  test_norms.py  test_package_training.py  test_payload.py  test_pcvr_data_split.py  test_pcvr_protocol.py  test_pcvr_trainer.py  test_pooling_heads.py  test_property_based.py  test_repo_policy.py  test_runtime_contract_matrix.py  test_runtime_optimization.py  test_schema_contract.py  test_tech_timeline.py  test_test_collection.py  test_training_cli.py  test_transformer_blocks.py
tools/: log_host_device_info.sh  run_online_dataset_eda.sh
(+55 files in other folders)
