[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "taac2026"
version = "1.0.0"
description = "TAAC 2026 experiment workspace"
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
	"Operating System :: POSIX :: Linux",
]
dependencies = [
	"datasets==2.14.7",
	"hypothesis==6.151.12",
	"matplotlib==3.10.8",
	"numpy==2.2.6",
	"optuna==4.8.0",
	"pyarrow==23.0.1",
	"pytest==9.0.3",
	"pytest-benchmark==5.2.3",
	"rich==14.3.3",
	"scikit-learn==1.7.2",
	"tensorboard==2.20.0",
	"tomli==2.4.0",
	"tqdm==4.67.1",
	"triton==3.3.1",
]

[project.optional-dependencies]
cuda126 = [
	"torch==2.7.1+cu126",
	"fbgemm-gpu==1.2.0+cu126",
	"torchrec==1.2.0+cu126",
]

[tool.uv.sources]
torch = [
	{ index = "pytorch-cu126", extra = "cuda126" },
]
"fbgemm-gpu" = [
	{ index = "pytorch-cu126", extra = "cuda126" },
]
torchrec = [
	{ index = "pytorch-cu126", extra = "cuda126" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv]
environments = ["sys_platform == 'linux'"]

[project.scripts]
taac-train = "taac2026.application.training.cli:main"
taac-evaluate = "taac2026.application.evaluation.cli:main"
taac-search = "taac2026.application.search.cli:main"
taac-package-train = "taac2026.application.maintenance.package_training:main"
taac-clean-pycache = "taac2026.application.maintenance.clean_pycache:main"
taac-clean-github-logs = "taac2026.application.maintenance.github_cleanup:main"
taac-plot-model-performance = "taac2026.application.reporting.cli:main"
taac-dataset-eda = "taac2026.application.reporting.eda_cli:main"
taac-tech-timeline = "taac2026.application.reporting.timeline_cli:main"
taac-bench-report = "taac2026.application.reporting.bench_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
addopts = "-ra --strict-markers --import-mode=importlib"
markers = [
	"unit: fast unit tests for pure logic and local contracts",
	"integration: higher-level workflow tests across module boundaries",
	"gpu: tests that require a CUDA GPU (skipped automatically when unavailable)",
	"benchmark_cpu: CPU-safe benchmark tests that run in automatic CI",
	"benchmark_gpu: GPU benchmark tests that run only via local CLI entry points",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["B", "UP", "PTH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/gpu_env_support.py" = ["E402"]

[tool.coverage.run]
branch = true
source = [
	"src/taac2026/domain",
	"src/taac2026/application/search",
	"src/taac2026/application/training",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
